# ndsu-ece-403-405

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt
main/app/: rtos_ble_led.c
main/ble/: ble_telemetry.c  ble_telemetry.h
main/common/: app_log.c  app_log.h  math_constants.h
main/dsp/: audio_buffer.c  audio_buffer.h  audio_dsp_pipeline.c  audio_dsp_pipeline.h  fft_engine.c  fft_engine.h  spectrum_map.c  spectrum_map.h
main/led/: led_effects.c  led_effects.h  led_matrix_renderer.c  led_matrix_renderer.h  led_protocol.h
main/test/: self_test.c  self_test.h
